--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,9 @@ rvm:
   - 2.1.9
   - 2.2.5
   - 2.3.1
+
+gemfile:
+  - gemfiles/Gemfile.rail4
+  - gemfiles/Gemfile.rail5
+
 before_install: gem install bundler -v 1.12.5
