Add an integration test to check the gem works with Rails

--- a/spec/dummy_app/config/rakuten_web_service.yml
+++ b/spec/dummy_app/config/rakuten_web_service.yml
@@ -3,7 +3,7 @@ development:
   affiliate_id: development_affiliate_id
 
 test:
-  application_id: test_application_id
+  application_id: rails_application_id
   affiliate_id: <%= ENV['AFFILIATE_ID'] %>
 
 production:
