Split spec files into two categories: default and integration to loading issue
Since Rails initalizers could only be loaded once, The test for the
initializer always fails in some cases.
To resolve this problem, tag for executing initailizer's test is
adopted.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ gemfile:
 - gemfiles/Gemfile.rail4
 - gemfiles/Gemfile.rail5
 before_install: gem install bundler -v 1.12.5
+
+script:
+  - bundle exec rspec
+  - bundle exec rspec --tag integration
+
 matrix:
   exclude:
   - rvm: 2.1.9
