--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install: gem install bundler -v 1.12.5
 script:
 - bundle exec rspec
 - bundle exec rspec --tag integration
+- echo $TRAVIS_RUBY_VERSION
 matrix:
   exclude:
   - rvm: 2.1.9
@@ -30,3 +31,4 @@ deploy:
   on:
     branch: setup_for_deploying_from_travis
     repo: satoryu/rakuten_web_service-rails
+    condition: $TRAVIS_RUBY_VERSION = 2.4.1
