--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ gemfile:
 - gemfiles/Gemfile.rail4
 - gemfiles/Gemfile.rail5
 before_install: gem install bundler -v 1.12.5
+bundler_args: --without vscode
 script:
 - bundle exec rspec
 - bundle exec rspec --tag integration
