--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ rvm:
 - 2.2.5
 - 2.3.1
 - 2.4.1
+- ruby-head
 gemfile:
 - gemfiles/Gemfile.rail4
 - gemfiles/Gemfile.rail5
@@ -18,6 +19,7 @@ matrix:
   exclude:
   - rvm: 2.1.9
     gemfile: gemfiles/Gemfile.rail5
+  - rvm: ruby-head
 notifications:
   email: false
   webhooks:
