Updating rubygem is required
See: https://github.com/travis-ci/travis-ci/issues/8978#issuecomment-354036443

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ rvm:
 gemfile:
 - gemfiles/Gemfile.rail4
 - gemfiles/Gemfile.rail5
+before_install: gem update --system
 bundler_args: "--without vscode"
 script:
 - bundle exec rspec
