--- a/.travis.yml
+++ b/.travis.yml
@@ -2,30 +2,33 @@ sudo: false
 language: ruby
 cache: bundler
 rvm:
-- 2.3.1
-- 2.4.1
-- 2.5.0
-- 2.6.0
-- ruby-head
+  - 2.3.1
+  - 2.4.1
+  - 2.5.0
+  - 2.6.0
+  - ruby-head
+
 gemfile:
-- gemfiles/Gemfile.rails4
-- gemfiles/Gemfile.rails5_1
-- gemfiles/Gemfile.rails5_2
+  - gemfiles/rails_4.gemfile
+  - gemfiles/rails_5.1.gemfile
+  - gemfiles/rails_5.2.gemfile
+  - gemfiles/rails_6.gemfile
+
 before_install: gem update --system
 bundler_args: "--without vscode"
 script:
-- bundle exec rspec
-- bundle exec rspec --tag integration
+  - bundle exec rspec
+  - bundle exec rspec --tag integration
 after_script:
-- bundle exec codeclimate-test-reporter
+  - bundle exec codeclimate-test-reporter
 matrix:
   allow_failures:
-  - rvm: ruby-head
+    - rvm: ruby-head
 notifications:
   email: false
   webhooks:
     urls:
-    - https://webhooks.gitter.im/e/8dfbb94cdb25ff174f4e
+      - https://webhooks.gitter.im/e/8dfbb94cdb25ff174f4e
 deploy:
   provider: rubygems
   api_key:
