Allows failures on rails 6 in ruby 2.4 or earlier

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,10 @@ after_script:
 matrix:
   allow_failures:
     - rvm: ruby-head
+    - rvm: 2.3.1
+      gemfile: gemfiles/rails_6.gemfile
+    - rvm: 2.4.1
+      gemfile: gemfiles/rails_6.gemfile
 notifications:
   email: false
   webhooks:
