Use latest codelimate test reporter

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,19 @@ gemfile:
   - gemfiles/rails_5.2.gemfile
   - gemfiles/rails_6.gemfile
 
-before_install: gem update --system
+before_install:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
 bundler_args: "--without vscode"
 script:
   - bundle exec rspec
   - bundle exec rspec --tag integration
+
 after_script:
-  - bundle exec codeclimate-test-reporter
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+
 matrix:
   allow_failures:
     - rvm: ruby-head
@@ -28,11 +34,13 @@ matrix:
       gemfile: gemfiles/rails_6.gemfile
     - rvm: 2.4.1
       gemfile: gemfiles/rails_6.gemfile
+
 notifications:
   email: false
   webhooks:
     urls:
       - https://webhooks.gitter.im/e/8dfbb94cdb25ff174f4e
+
 deploy:
   provider: rubygems
   api_key:
@@ -40,7 +48,8 @@ deploy:
   gem: rakuten_web_service-rails
   on:
     repo: satoryu/rakuten_web_service-rails
-    condition: "$TRAVIS_RUBY_VERSION = 2.5.0"
+    condition: "$TRAVIS_RUBY_VERSION = 2.6.0"
+
 addons:
   code_climate:
     repo_token:
